# oj-eval-claude-code-004-20260423233129

./: .gitignore  CMakeLists.txt
src/: bookstore.cpp  bookstore.h  main.cpp
